<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SettingsActivity!</string>
    <string name="app_name">Android Auto Profiles</string>
    <string name="start_time">czas startu</string>
    <string name="end_time">czas zakończenia</string>
    <string name="radius">promień</string>
    <string name="mode">tryb</string>
    <string name="priority">priorytet</string>
    <string name="add_profile">dodaj profil</string>
    <string name="longtitude">długość</string>
    <string name="latitude">szerokość</string>

    <string-array name="priorities">
        <item >SILENT</item>
        <item >VIBRATE</item>
        <item >NORMAL</item>
    </string-array>
    
    <string name="profile_edit">Edycja profilu</string>
    <string name="save">zapisz</string>
    <string name="name">nazwa</string>

</resources>